overflow fix 2

--- a/css/index.css
+++ b/css/index.css
@@ -99,7 +99,7 @@
   .home-content-container {
     flex-direction: column;
     gap: 40px;
-    overflow-x: auto;
+    overflow-x: hidden;
   }
 
   .slide {
